update hotel service